--- a/write-up/packages.tex
+++ b/write-up/packages.tex
@@ -8,6 +8,16 @@
 \usepackage{hyperref}
 \usepackage{orcidlink}
 \usepackage{stmaryrd} % For \llbracket and \rrbracket
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+\usepackage{pgfplotstable}
+\usepackage{siunitx}
+\usepackage[Tol]{colorblind}
+
+\sisetup{
+    round-mode = places,
+    round-precision = 5,
+}
 
 % Improved interfaces
 \usepackage{float, graphicx, caption, subcaption}
@@ -21,3 +31,14 @@
 \usetikzlibrary{shapes.geometric}
 \usetikzlibrary{calc}
 \usetikzlibrary{cd}
+
+% Pgfplots config
+\pgfplotscreateplotcyclelist{cblist}{
+    {T-Q-MC0,mark=*},
+    {T-Q-MC2,mark=square},
+    {T-Q-MC3,mark=o},
+    {T-Q-MC4,mark=+},
+    {T-Q-MC5,mark=otimes*},
+    {T-Q-MC6,mark=triangle*},
+    {T-Q-MC7,mark=diamond*}
+}
