Add figures and get ready to dispatch

--- a/write-up/packages.tex
+++ b/write-up/packages.tex
@@ -32,13 +32,13 @@
 \usetikzlibrary{calc}
 \usetikzlibrary{cd}
 
-% Pgfplots config
-\pgfplotscreateplotcyclelist{cblist}{
-    {T-Q-MC0,mark=*},
-    {T-Q-MC2,mark=square},
-    {T-Q-MC3,mark=o},
-    {T-Q-MC4,mark=+},
-    {T-Q-MC5,mark=otimes*},
-    {T-Q-MC6,mark=triangle*},
-    {T-Q-MC7,mark=diamond*}
-}
+% % Pgfplots config
+% \pgfplotscreateplotcyclelist{cblist}{
+%     {T-Q-MC2,mark=*},
+%     {T-Q-MC3,mark=o},
+%     {T-Q-MC4,mark=+},
+%     {T-Q-MC5,mark=otimes*},
+%     {T-Q-MC6,mark=triangle*},
+%     {T-Q-MC7,mark=diamond*},
+%     {T-Q-MC0,mark=square}
+% }
